# flake8-annotations

./: .bumpversion.cfg  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  ast-adventures.py  azure-pipelines.yml  pyproject.toml  setup.py  tox.ini
.dependabot/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint_test.yml  main.yml  pypi_release.yml
ast_adventures/: __init__.py  __main__.py  checker.py  error_codes.py
flake8_annotations/: __init__.py  ast_walker.py  checker.py  enums.py  error_codes.py  models.py  visitors.py
flake8_type_hinted/: __init__.py  __main__.py  checker.py  error_codes.py
testing/: argument_parsing_test_cases.py  classifier_object_attributes.py  helpers.py  object_attributes.py  parser_object_attributes.py  printed_object_formatting.py  test_classifier.py  test_column_line_numbers.py  test_dispatch_decorator.py  test_dummy_arg_error_suppression.py  test_dynamic_function_error_suppression.py  test_empty_src.py  test_error_codes.py  test_flake8_actually_runs_checker.py  test_flake8_format.py  test_fully_annotated.py  test_mypy_init_return.py  test_none_return_error_suppression.py  test_object_formatting.py  test_opinionated_any.py  test_overload_decorator.py  test_parser.py  test_type_comment_arg_injection.py  test_type_comment_parsing.py  test_type_comments.py  test_type_ignore.py  test_variable_formatting.py  type_comment_parser_object_attributes.py  type_comment_test_cases.py
testing/code/: all_args.py  all_functions.py  annotation_presence.py  column_line_numbers.py  typ001.py  typ002.py  typ003.py  type_comments.py  variable_formatting.py
testing/test_cases/: annotation_presence_test_cases.py  argument_parsing_test_cases.py  classifier_object_attributes.py  column_line_numbers_test_cases.py  dispatch_decorator_test_cases.py  dummy_arg_suppress_test_cases.py  dynamic_function_test_cases.py  function_parsing_test_cases.py  mypy_init_return_test_cases.py  none_return_suppress_test_cases.py  object_formatting_test_cases.py  overload_decorator_test_cases.py  type_comment_arg_injection_test_cases.py  type_comment_test_cases.py  variable_formatting_test_cases.py
