[tool.poetry]
name = "flake8-annotations"
version = "3.1.1"
description = "Flake8 Type Annotation Checks"
license = "MIT"
readme = "README.md"
authors = ["S Co1 <sco1.git@gmail.com>"]
homepage = "https://github.com/sco1/flake8-annotations"
repository = "https://github.com/sco1/flake8-annotations"
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

include = [
    {path = "./CHANGELOG.md", format = "sdist"}
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/sco1/flake8-annotations/issues"

[tool.poetry.dependencies]
python = ">=3.8.1"
attrs = ">=21.4"
flake8 = ">=5.0"

[tool.poetry.dev-dependencies]
black = "^24.3"
bump2version = "^1.0"
cogapp = "^3.3"
isort = "^5.10"
mypy = "^1.0"
pre-commit = "^3.0"
pytest = "^8.0"
pytest-check = "^2.0"
pytest-cov = "^5.0"
pytest-randomly = "^3.12"
ruff = "^0.4"
tox = { version = "^4.4", python = "<4.0" }

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
"ANN" = "flake8_annotations.checker:TypeHintChecker"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "flake8-annotations,testing"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
exclude = "^testing/"
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
