[project]
name = "flake8-annotations"
version = "3.1.1"
description = "Flake8 Type Annotation Checks"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 6 - Mature",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

requires-python = ">=3.10"
dependencies = [
    "flake8>=5.0",
]

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/flake8-annotations/blob/main/README.md"
Repository = "https://github.com/sco1/flake8-annotations"
Issues = "https://github.com/sco1/flake8-annotations/issues"
Changelog = "https://github.com/sco1/flake8-annotations/blob/main/CHANGELOG.md"

[project.entry-points."flake8.extension"]
"ANN" = "flake8_annotations.checker:TypeHintChecker"

[tool.uv]
dev-dependencies = [
    "black~=25.0",
    "bump2version~=1.0",
    "cogapp~=3.3",
    "isort~=6.0",
    "mypy~=1.11",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "pytest-check~=2.4",
    "pytest-cov~=6.0",
    "pytest-randomly~=3.15",
    "ruff~=0.6",
    "tox~=4.18",
    "tox-uv~=1.11",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "flake8-annotations,testing"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
exclude = "^testing/"
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.uv.build-backend]
module-name = "flake8_annotations"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
